fix: undue menu scrolling on mobile browsers

--- a/css/global.css
+++ b/css/global.css
@@ -23,6 +23,7 @@
 
 html {
 	font-size: 62, 5%;
+	overflow-x: hidden;
 }
 
 html,
